--- a/eladmin-system/src/main/resources/config/application-dev.yml
+++ b/eladmin-system/src/main/resources/config/application-dev.yml
@@ -2,14 +2,11 @@
 spring:
   shardingsphere:
     datasource:
-      names: write_ds,read_ds_0,read_ds_1
-      #     主数据源
-      write_ds:
+      names: primary_ds,replica_ds_0,replica_ds_1
+      #      公共配置
+      common:
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-        jdbc-url: jdbc:log4jdbc:mysql://${DB_HOST:10.100.6.140}:${DB_PORT:3306}/${DB_NAME:eladmin}?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
-        username: ${DB_USER:root}
-        password: ${DB_PWD:root}
         # 初始连接数
         initial-size: 5
         # 最小连接数
@@ -50,121 +47,36 @@ spring:
           wall:
             config:
               multi-statement-allow: true
+      #     主数据源
+      primary_ds:
+        jdbc-url: jdbc:log4jdbc:mysql://${DB_HOST:10.100.6.140}:${DB_PORT:3306}/${DB_NAME:eladmin}?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
+        username: ${DB_USER:root}
+        password: ${DB_PWD:root}
       #     分数据源
-      read_ds_0:
-        type: com.alibaba.druid.pool.DruidDataSource
-        driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+      replica_ds_0:
         jdbc-url: jdbc:log4jdbc:mysql://${DB_HOST:10.100.6.140}:${DB_PORT:3308}/${DB_NAME:eladmin}?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
         #        从库改用只读账号
         username: ${DB_USER:reader}
         password: ${DB_PWD:123456}
-        # 初始连接数
-        initial-size: 5
-        # 最小连接数
-        min-idle: 15
-        # 最大连接数
-        max-active: 30
-        # 获取连接超时时间
-        max-wait: 5000
-        # 连接有效性检测时间
-        time-between-eviction-runs-millis: 60000
-        # 连接在池中最小生存的时间
-        min-evictable-idle-time-millis: 300000
-        # 连接在池中最大生存的时间
-        max-evictable-idle-time-millis: 900000
-        # 是否自动回收超时连接
-        remove-abandoned: true
-        # 超时时间(以秒数为单位)
-        remove-abandoned-timeout: 180
-        # 指明连接是否被空闲连接回收器(如果有)进行检验.如果检测失败,则连接将被从池中去除
-        test-while-idle: true
-        # 指明是否在从池中取出连接前进行检验,如果检验失败, 则从池中去除连接并尝试取出另一个
-        test-on-borrow: true
-        # 是否在归还到池中前进行检验
-        test-on-return: false
-        # 检测连接是否有效
-        validation-query: select 1
-        # 配置监控统计
-        webStatFilter:
-          enabled: true
-        stat-view-servlet:
-          enabled: true
-          url-pattern: /druid/*
-          reset-enable: false
-        filter:
-          stat:
-            enabled: true
-            # 记录慢SQL
-            log-slow-sql: true
-            slow-sql-millis: 1000
-            merge-sql: true
-          wall:
-            config:
-              multi-statement-allow: true
       #     分数据源
-      read_ds_1:
-        type: com.alibaba.druid.pool.DruidDataSource
-        driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+      replica_ds_1:
         jdbc-url: jdbc:log4jdbc:mysql://${DB_HOST:10.100.6.140}:${DB_PORT:3307}/${DB_NAME:eladmin}?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
         #        从库改用只读账号
         username: ${DB_USER:reader}
         password: ${DB_PWD:123456}
-        # 初始连接数
-        initial-size: 5
-        # 最小连接数
-        min-idle: 15
-        # 最大连接数
-        max-active: 30
-        # 获取连接超时时间
-        max-wait: 5000
-        # 连接有效性检测时间
-        time-between-eviction-runs-millis: 60000
-        # 连接在池中最小生存的时间
-        min-evictable-idle-time-millis: 300000
-        # 连接在池中最大生存的时间
-        max-evictable-idle-time-millis: 900000
-        # 是否自动回收超时连接
-        remove-abandoned: true
-        # 超时时间(以秒数为单位)
-        remove-abandoned-timeout: 180
-        # 指明连接是否被空闲连接回收器(如果有)进行检验.如果检测失败,则连接将被从池中去除
-        test-while-idle: true
-        # 指明是否在从池中取出连接前进行检验,如果检验失败, 则从池中去除连接并尝试取出另一个
-        test-on-borrow: true
-        # 是否在归还到池中前进行检验
-        test-on-return: false
-        # 检测连接是否有效
-        validation-query: select 1
-        # 配置监控统计
-        webStatFilter:
-          enabled: true
-        stat-view-servlet:
-          enabled: true
-          url-pattern: /druid/*
-          reset-enable: false
-        filter:
-          stat:
-            enabled: true
-            # 记录慢SQL
-            log-slow-sql: true
-            slow-sql-millis: 1000
-            merge-sql: true
-          wall:
-            config:
-              multi-statement-allow: true
-#    规则    主从配置
+    #    规则    主从配置
     rules:
-      read-write-splitting:
+      replica-query:
         load-balancers:
-          round_robin:
+          round-robin:
             type: ROUND_ROBIN
         data-sources:
           pr_ds:
-            write-data-source-name: write_ds
-            read-data-source-names: read_ds_0,read_ds_1
+            primary-data-source-name: primary_ds
+            replica-data-source-names: replica_ds_0,replica_ds_1
             load-balancer-name: round_robin
-    props:
-      sql-show：true
+#    props:
+#      sql-show：true
 
   #  monogodb
   data:
