Springboot部署jar，依赖外置，方便后续更新部署。需添加启动参数 -Djava.ext.dirs=lib 。且不适于包含第三方jar的情况。相关详见https://www.lwohvye.com/2021/06/05/springboot%e9%a1%b9%e7%9b%ae%e6%89%93%e9%83%a8%e7%bd%b2jar%ef%bc%8c%e4%bb%a3%e7%a0%81%e4%be%9d%e8%b5%96%e5%88%86%e7%a6%bb/

--- a/eladmin-starter/pom.xml
+++ b/eladmin-starter/pom.xml
@@ -50,6 +50,7 @@
     <!-- 打包 -->
     <build>
         <plugins>
+            <!-- Spring Boot模块jar构建 -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -60,7 +61,22 @@
                             <artifactId>spring-boot-configuration-processor</artifactId>
                         </exclude>
                     </excludes>
+                    <includes>
+                        <!-- 不存在的include引用，相当于排除所有maven依赖jar，没有任何三方jar文件打入输出jar -->
+                        <include>
+                            <groupId>null</groupId>
+                            <artifactId>null</artifactId>
+                        </include>
+                    </includes>
+                    <layout>ZIP</layout>
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <!-- 跳过单元测试 -->
             <plugin>
@@ -104,6 +120,26 @@
                         <exclude>config/**</exclude>
                     </excludes>
                 </configuration>
+            </plugin>
+            <!-- 拷贝项目所有依赖jar文件到构建lib目录下 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
+                            <excludeTransitive>false</excludeTransitive>
+                            <stripVersion>false</stripVersion>
+                            <silent>true</silent>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
