--- a/eladmin-starter/pom.xml
+++ b/eladmin-starter/pom.xml
@@ -64,8 +64,8 @@
                     <includes>
                         <!-- 不存在的include引用，相当于排除所有maven依赖jar，没有任何三方jar文件打入输出jar -->
                         <include>
-                            <groupId>null</groupId>
-                            <artifactId>null</artifactId>
+                            <groupId>nothing</groupId>
+                            <artifactId>nothing</artifactId>
                         </include>
                     </includes>
                     <layout>ZIP</layout>
