--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,11 @@
                 <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                 <version>${springdoc.openapi.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
+                <version>${springdoc.openapi.version}</version>
+            </dependency>
 
             <!--工具包-->
             <dependency>
