--- a/unicorn-tp-tools/build.gradle
+++ b/unicorn-tp-tools/build.gradle
@@ -10,6 +10,7 @@ plugins {
 dependencies {
     api project(':unicorn-core')
     api 'org.springframework.boot:spring-boot-starter-mail'
+    implementation 'org.springframework.boot:spring-boot-starter-freemarker'
     implementation 'software.amazon.awssdk:s3-transfer-manager:2.18.28-PREVIEW'
     implementation 'org.bouncycastle:bcpkix-jdk18on:1.72'
     annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
